--- a/rohan-matharu-portfolio/css/style.css
+++ b/rohan-matharu-portfolio/css/style.css
@@ -229,7 +229,7 @@ html{
 }
 
 .site-main .project-area .grid .our-project > .title h4{
-    font: normal 700 25px/12px var(--roboto);
+    font: normal 700 25px/32px var(--roboto);
 }
 
 .site-main .project-area .grid .our-project .img a:hover img{
@@ -346,3 +346,11 @@ footer.footer-area .social a:hover > i{
 
 
 /* End Footer */ 
+
+@media only screen and (max-width: 991px){
+
+    .header_area .main-menu .navbar .navbar-brand {
+        padding: 0 2rem 0 1rem;
+    }
+
+}
